Update SupervisorWorkerEx.java